5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1593_2426.log
== TEST (2019-03-28 10:09:04) 
-- CODE:
tempo = float(input("Distância: "))
vel = float(input("Velocidade: "))

distancia = tempo*velocidade
lit = 12*distancia
print(distancia)
print(lit)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    distancia = tempo*velocidade
NameError: name 'velocidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:09:15) 
-- CODE:
tempo = float(input("Distancia: "))
vel = float(input("Velocidade: "))

distancia = tempo*velocidade
lit = 12*distancia
print(distancia)
print(lit)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    distancia = tempo*velocidade
NameError: name 'velocidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:09:32) 
-- CODE:
tempo = float(input("Distancia: "))
vel = float(input("Velocidade: "))

distancia = tempo*velocidade
lit = 12*distancia
print(distancia)
print(lit)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    distancia = tempo*velocidade
NameError: name 'velocidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:09:46) 
-- CODE:
tempo = float(input("Distancia: "))
vel = float(input("Velocidade: "))

distancia = tempo*vel
lit = 12*distancia
print(distancia)
print(lit)

-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:09:59) 
-- CODE:
tempo = float(input("Distancia: "))
vel = float(input("Velocidade: "))

distancia = tempo*vel
lit = 12*distancia
print(distancia)
print(lit)

-- EXECUTION TIME:
0.15114
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
10800.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
7200.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
1152.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:10:31) 
-- CODE:
tempo = float(input("Duracao: "))
vel = float(input("Velocidade: "))

distancia = tempo*vel
lit = 12*distancia
print(distancia)
print(lit)

-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:11:05) 
-- CODE:
tempo = float(input("Duracao: "))
vel = float(input("Velocidade: "))

distancia = tempo*vel
lit = 12*distancia
print(distancia)
print(lit)

-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:11:06) 
-- CODE:
tempo = float(input("Duracao: "))
vel = float(input("Velocidade: "))

distancia = tempo*vel
lit = 12*distancia
print(distancia)
print(lit)

-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:11:07) 
-- CODE:
tempo = float(input("Duracao: "))
vel = float(input("Velocidade: "))

distancia = tempo*vel
lit = 12*distancia
print(distancia)
print(lit)

-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:11:07) 
-- CODE:
tempo = float(input("Duracao: "))
vel = float(input("Velocidade: "))

distancia = tempo*vel
lit = 12*distancia
print(distancia)
print(lit)

-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:16:37) 
-- CODE:
temp = float(input("Duracao: "))
vel = float(input("Velocidade: "))
dis = tem*vel
lit = dis/12
print(dis)
print(lit)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    dis = tem*vel
NameError: name 'tem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:16:54) 
-- CODE:
temp = float(input("Duracao: "))
vel = float(input("Velocidade: "))
dis = temp*vel
lit = dis/12
print(dis)
print(lit)


-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:17:02) 
-- CODE:
temp = float(input("Duracao: "))
vel = float(input("Velocidade: "))
dis = temp*vel
lit = dis/12
print(dis)
print(lit)


-- EXECUTION TIME:
0.133526
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
